added TODOs to your classes :)