@@ -28,7 +28,7 @@ public class ProductLine implements Runnable {
     public void run() {
         while (!inline.isEmpty()) {
             if (inprogress.isEmpty()) {
-                inprogress.add(inline.removeFirst());
+                inprogress.add(inline.remove(0));
             }
 
             while (true/* canMakeAnotherProduct && still didn't make all the required quantity */) {
